movievault/k8s/03-inventory-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  namespace: movievault
spec:
  replicas: 2          # Run 2 copies for high availability
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      labels:
        app: inventory-service
    spec:
      tolerations:
      - key: "eks.amazonaws.com/compute-type"
        operator: "Equal"
        value: "auto"
        effect: "NoSchedule"
      containers:
        - name: inventory-service
          # Replace 100984278168 with your AWS account ID
          image: 100984278168.dkr.ecr.us-east-1.amazonaws.com/movievault/inventory-service:latest
          imagePullPolicy: Always 
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          # ── Resource limits ──
          resources:
            requests:
              cpu: 100m       # 0.1 CPU
              memory: 128Mi
            limits:
              cpu: 500m       # 0.5 CPU max
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: movievault
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer     # Creates an AWS ALB for external access
  selector:
    app: inventory-service
  ports:
    - port: 80
      targetPort: 8080
